examples/test/testpolicy18161.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18161
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key41: value10
      key17: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value19
          key49: value22
      podSelector:
        matchLabels:
          key18: value42
